fix: molecule not work well

--- a/extensions/molecule/prepare/prepare.yml
+++ b/extensions/molecule/prepare/prepare.yml
@@ -27,9 +27,9 @@
       ansible.builtin.user:
         name: test_user
         create_home: true
-    - name: Remove passwd.lock file
+    - name: Remove pwd.lock file
       ansible.builtin.file:
-        path: /etc/passwd.lock
+        path: /etc/pwd.lock
         state: absent
     - name: Generate an OpenSSH keypair
       community.crypto.openssh_keypair:
