features: add new sysctl parameters

--- a/roles/security/tasks/sysctl.yml
+++ b/roles/security/tasks/sysctl.yml
@@ -73,6 +73,8 @@
       value: 0
     - name: net.ipv4.icmp_ignore_bogus_error_responses
       value: 1
+    - name: net.ipv4.icmp_echo_ignore_all
+      value: "{{ sysctl_icmp_echo_ignore_all }}"
 
 - name: Configure ip forwarding
   ansible.posix.sysctl:
@@ -103,6 +105,22 @@
       value: 65536
     - name: net.ipv4.ip_local_port_range
       value: 1024 65535
+    - name: net.ipv4.tcp_max_syn_backlog
+      value: 512
+    - name: net.ipv4.tcp_fin_timeout
+      value: 10
+    - name: net.ipv4.tcp_max_orphans
+      value: 65536
+    - name: net.ipv4.tcp_keepalive_time
+      value: 60
+    - name: net.ipv4.tcp_keepalive_intvl
+      value: 15
+    - name: net.ipv4.tcp_keepalive_probes
+      value: 5
+    - name: net.core.netdev_max_backlog
+      value: 1000
+    - name: net.core.somaxconn
+      value: 1024
 
 - name: FSTEC recomendations v1
   ansible.posix.sysctl:
