--- a/roles/security/defaults/main.yml
+++ b/roles/security/defaults/main.yml
@@ -44,6 +44,7 @@ crowdsec_whitelist:
 unprivileged_bpf_enabled: false
 forwarding_enabled: true
 user_namespace_enabled: true
+icmp_echo_ignore_all: true
 
 # PAM
 wheel_users:
