fix: fix description

--- a/roles/prepare/meta/main.yml
+++ b/roles/prepare/meta/main.yml
@@ -8,11 +8,7 @@ galaxy_info:
 
   galaxy_tags:
     - linux
-    - security
-    - sshd
-    - crowdsec
-    - firewalld
-    - auditd
-    - sysctl
+    - firts start
+    - prepare server
 
 dependencies: []
