--- a/roles/security/tasks/crowdsec-install-redhat.yml
+++ b/roles/security/tasks/crowdsec-install-redhat.yml
@@ -16,8 +16,9 @@
   ansible.builtin.dnf:
     name: "crowdsec-{{ crowdsec_version }}-*"
     state: present
+  when: not crowdsec_in_docker
 
 - name: Install crowdsec bouncer
   ansible.builtin.dnf:
-    name: "{{ crowdsec_firewall_bouncer_redhat_package }}"
+    name: "crowdsec-firewall-bouncer-{{ crowdsec_firewall_bouncer_type }}-{{ crowdsec_firewall_bouncer_version }}-*"
     state: present
