--- a/galaxy.yml
+++ b/galaxy.yml
@@ -30,6 +30,7 @@ dependencies:
   community.general: "10.2.0"
   community.crypto: "2.23.0"
   ansible.posix: "2.0.0"
+  community.docker: "4.3.0"
 
 repository: https://github.com/pgalonza/linux-collection
 
