--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -18,6 +18,10 @@
   ansible.builtin.import_tasks: crowdsec-install-debian.yml
   when: ansible_facts['os_family'] == "Debian"
 
+- name: Install crowdsec in Docker
+  ansible.builtin.import_tasks: crowdsec-install-debian.yml
+  when: crowdsec_in_docker
+
 - name: Configuration crowdsec
   ansible.builtin.import_tasks: crowdsec-configuration.yml
 
