fix: pam not for deploy user

--- a/roles/security/defaults/main.yml
+++ b/roles/security/defaults/main.yml
@@ -50,6 +50,4 @@ user_namespace_enabled: true
 icmp_echo_ignore_all: true
 
 # PAM
-wheel_users:
-  - root
-  - "{{ ansible_user }}"
+wheel_users: []
