--- a/roles/security/tasks/grub.yml
+++ b/roles/security/tasks/grub.yml
@@ -11,5 +11,5 @@
       init_on_alloc=1 slab_nomerge"
 
 - name: Update grub configuration
-  ansible.builtin.command: "grub-mkconfig -o /boot/grub/grub.cfg"
+  ansible.builtin.command: "grub-mkconfig -o /boot/grub*/grub.cfg"
   tags: molecule-notest
