--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -45,4 +45,4 @@
 #   when: ansible_facts['os_family'] == "RedHat"
 
 - name: Configure nftables
-  ansible.builtin.import_tasks: firewalld.yml
+  ansible.builtin.import_tasks: nftables.yml
