fix: not restart if using docker for crowdsec

--- a/roles/security/handlers/main.yml
+++ b/roles/security/handlers/main.yml
@@ -20,6 +20,7 @@
     state: restarted
     name: crowdsec
   listen: restart_crowdsec
+  when: not crowdsec_in_docker
 
 - name: Reload Firewalld
   ansible.builtin.systemd:
