--- a/roles/bash_profile/defaults/main.yml
+++ b/roles/bash_profile/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 # defaults file for bash_profile
 
-server_role: Development
-on_login_message: "This is a {{ server_role }} server"
+bash_server_role: Development
+bash_on_login_message: "This is a {{ bash_server_role }} server"
