feature: change prompt task for work with any users

--- a/roles/bash_profile/defaults/main.yml
+++ b/roles/bash_profile/defaults/main.yml
@@ -3,3 +3,5 @@
 
 bash_server_role: Development
 bash_on_login_message: "This is a {{ bash_server_role }} server"
+bash_prompt_users:
+  - "{{ ansible_user }}"
