refactor: change galaxy tags

--- a/roles/security/meta/main.yml
+++ b/roles/security/meta/main.yml
@@ -11,8 +11,8 @@ galaxy_info:
     - security
     - sshd
     - crowdsec
-    - firewalld
     - auditd
     - sysctl
+    - nftables
 
 dependencies: []
