--- a/roles/prepare/tasks/main.yml
+++ b/roles/prepare/tasks/main.yml
@@ -2,13 +2,13 @@
 # tasks file for prepare
 - name: Install user ssh key
   ansible.posix.authorized_key:
-    user: "{{ owner_user }}"
+    user: "{{ admin_user }}"
     state: present
     key: "{{ lookup('file', '{{ ssh_key_dir }}/id_rsa.pub') }}"
 
 - name: Add the deploy user
   ansible.builtin.user:
-    name: "{{ deploy_user }}"
+    name: "{{ ansible_deploy_user }}"
     comment: Deploy user
     create_home: true
     shell: /bin/bash
@@ -16,14 +16,14 @@
 
 - name: Install deploy user ssh key
   ansible.posix.authorized_key:
-    user: "{{ deploy_user }}"
+    user: "{{ ansible_deploy_user }}"
     state: present
-    key: "{{ lookup('file', '{{ ssh_key_dir }}/{{ deploy_user }}_id_rsa.pub') }}"
+    key: "{{ lookup('file', '{{ ssh_key_dir }}/{{ ansible_deploy_user }}_id_rsa.pub') }}"
 
 - name: "Deploy user permissions"
   ansible.builtin.copy:
-    dest: "/etc/sudoers.d/{{ deploy_user }}"
-    content: "{{ deploy_user }} ALL=(ALL) NOPASSWD:ALL\n"
+    dest: "/etc/sudoers.d/{{ ansible_deploy_user }}"
+    content: "{{ ansible_deploy_user }} ALL=(ALL) NOPASSWD:ALL\n"
     owner: root
     group: root
     mode: "0600"
@@ -31,12 +31,12 @@
 
 # - name: Ansible user permissions in sudoers
 #   community.general.sudoers:
-#     name: "{{ deploy_user }}"
+#     name: "{{ ansible_deploy_user }}"
 #     host: ALL
 #     commands: ALL
 #     noexec: false
 #     nopassword: true
-#     user: "{{ deploy_user }}"
+#     user: "{{ ansible_deploy_user }}"
 
 - name: Change SSHD port
   ansible.builtin.lineinfile:
