feature: add journald for crowdsec

--- a/roles/security/tasks/crowdsec-configuration.yml
+++ b/roles/security/tasks/crowdsec-configuration.yml
@@ -17,7 +17,8 @@
     group: root
     mode: 0600
   loop:
-    - sshd.yaml
+    - file.yaml
+    - journalctl.yaml
   notify: restart_crowdsec
 
 - name: Copy crowdsec configuration
