--- a/roles/security/tasks/nftables.yml
+++ b/roles/security/tasks/nftables.yml
@@ -30,6 +30,11 @@
     group: root
   notify: restart_nftables
 
+- name: Use iptables-nft
+  community.general.alternatives:
+    name: iptables
+    path: /usr/sbin/iptables-nft
+
 - name: Enable nftables
   ansible.builtin.systemd:
     name: nftables
