feature: match pattern for nft config

--- a/roles/security/files/nftables/nftables.conf
+++ b/roles/security/files/nftables/nftables.conf
@@ -3,7 +3,7 @@
 
 #include "/etc/nftables/main.nft"
 
-include "/etc/nftables/general-rules.nft"
+include "/etc/nftables/[0-9]-*.nft"
 
 # To customize, either edit the samples in /etc/nftables, append further
 # commands to the end of this file or overwrite it after first service
